# Copyright (c) 2024, 🌟夕元 & 🌟VEA
# All Rights Reserved
# 
# This file is part of LinuxProcessTrace distributed under the BSD 3-Clause License. 
# See the LICENSE file at the root directory of this project for more details.

[workspace]

members = [
    "procutils",
    "process_trace"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
